[gd_scene load_steps=13 format=3 uid="uid://dlgp47j2rfgia"]

[ext_resource type="Texture2D" uid="uid://bfswn016ftyl4" path="res://Sprites/park_back.png" id="1_pk56l"]
[ext_resource type="Script" uid="uid://dbowmepas04un" path="res://scripts/etapa_4_primer_amor.gd" id="1_smn7l"]
[ext_resource type="PackedScene" uid="uid://b0tllsqscr3fl" path="res://Prefabs/Corazon.tscn" id="2_6dkhc"]
[ext_resource type="Script" uid="uid://v12dehwqhgmh" path="res://scripts/MovimientoPersonajeEtapa4.gd" id="2_lbpx2"]
[ext_resource type="Texture2D" uid="uid://b4sjcn8l4aj0a" path="res://Sprites/Kid_pickHearth.png" id="2_njm2l"]
[ext_resource type="FontFile" uid="uid://brmoan08g5u2m" path="res://Fuente/DK Cool Crayon.ttf" id="4_7t0jk"]
[ext_resource type="Texture2D" uid="uid://804b2nytdh1p" path="res://Sprites/CrayonTexture2.jpg" id="6_2cwyx"]
[ext_resource type="Texture2D" uid="uid://dk1xitjh4bbvm" path="res://Sprites/CrayonTexture1.jpg" id="7_bbfw7"]
[ext_resource type="Texture2D" uid="uid://cdx2edt27pddi" path="res://Sprites/girl.png" id="8_fm5yq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njm2l"]
size = Vector2(63, 28.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbpx2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7t0jk"]
size = Vector2(1301, 32)

[node name="Etapa4PrimerAmor" type="Node2D"]
script = ExtResource("1_smn7l")
objeto_escena = ExtResource("2_6dkhc")

[node name="Background" type="TextureRect" parent="."]
offset_left = -54.0
offset_top = -80.0
offset_right = 1239.0
offset_bottom = 642.0
texture = ExtResource("1_pk56l")
expand_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 53.0
offset_top = 41.0
offset_right = 505.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7t0jk")
theme_override_font_sizes/font_size = 41
text = "Agarra los corazones!!"

[node name="ninia" type="TextureRect" parent="."]
offset_left = 864.0
offset_top = 79.0
offset_right = 904.0
offset_bottom = 119.0
scale = Vector2(11.377, 13.5958)
texture = ExtResource("8_fm5yq")
expand_mode = 1

[node name="Player" type="CharacterBody2D" parent="." groups=["Personaje"]]
position = Vector2(137, 505)
script = ExtResource("2_lbpx2")
velocidad = 350

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_njm2l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-14.5, 59.75)
shape = SubResource("RectangleShape2D_njm2l")
debug_color = Color(0, 0.6, 0.701961, 0.545098)

[node name="AreaDeCaida" type="Area2D" parent="."]
position = Vector2(574, 307)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeCaida"]
scale = Vector2(52.36, 32.4)
shape = SubResource("RectangleShape2D_lbpx2")
debug_color = Color(0, 0.6, 0.701961, 0.521569)

[node name="BarraDeAmor" type="Node" parent="."]

[node name="Limite" type="TextureRect" parent="BarraDeAmor"]
offset_left = 44.0
offset_top = 125.0
offset_right = 84.0
offset_bottom = 496.0
texture = ExtResource("6_2cwyx")
expand_mode = 1

[node name="Progreso" type="TextureRect" parent="BarraDeAmor"]
offset_left = 81.0
offset_top = 492.0
offset_right = 115.0
offset_bottom = 509.0
rotation = 3.14159
texture = ExtResource("7_bbfw7")
expand_mode = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(599.5, 669)
shape = SubResource("RectangleShape2D_7t0jk")

[connection signal="body_entered" from="AreaDeCaida" to="Player" method="_on_area_de_caida_body_entered"]
[connection signal="body_exited" from="AreaDeCaida" to="Player" method="_on_area_de_caida_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
